objects/RPS_Account__x.object
<CustomObject>
    <fields>
        <fullName>RPS_Contact_Role_pc__c</fullName>
        <externalDeveloperName>RPS_Contact_Role__pc</externalDeveloperName>
        <label>Contact Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Producer</fullName>
                </value>
                <value>
                    <fullName>RIA</fullName>
                </value>
                <value>
                    <fullName>Advisor Firm Administrative Assistant</fullName>
                </value>
                <value>
                    <fullName>Advisor Firm Business Contact</fullName>
                </value>
                <value>
                    <fullName>Advisor Firm External Wholesaler (Influencer)</fullName>
                </value>
                <value>
                    <fullName>Advisor Firm Investment Analyst</fullName>
                </value>
                <value>
                    <fullName>Advisor Firm Plan Consultant</fullName>
                </value>
                <value>
                    <fullName>Advisor Firm Relationship Manager</fullName>
                </value>
                <value>
                    <fullName>Advisor Firm RFP Analyst</fullName>
                </value>
                <value>
                    <fullName>Auditor CPA</fullName>
                </value>
                <value>
                    <fullName>Competitor Contact</fullName>
                </value>
                <value>
                    <fullName>ERISA Attorney</fullName>
                </value>
                <value>
                    <fullName>Fund Partner Analyst Contact</fullName>
                </value>
                <value>
                    <fullName>Fund Partner External Wholesaler</fullName>
                </value>
                <value>
                    <fullName>Fund Partner National Accounts Contact</fullName>
                </value>
                <value>
                    <fullName>Fund Partner Sales Manager</fullName>
                </value>
                <value>
                    <fullName>Payroll Provider General Contact</fullName>
                </value>
                <value>
                    <fullName>Payroll Provider-Primary Contact (DB)</fullName>
                </value>
                <value>
                    <fullName>Payroll Provider-Primary Contact (DC)</fullName>
                </value>
                <value>
                    <fullName>Payroll Provider-Primary Contact (NQ)</fullName>
                </value>
                <value>
                    <fullName>Plan Sponsor Administrative Fiduciary</fullName>
                </value>
                <value>
                    <fullName>Plan Sponsor Administrator</fullName>
                </value>
                <value>
                    <fullName>Plan Sponsor Committee Member</fullName>
                </value>
                <value>
                    <fullName>Plan Sponsor Compliance Contact</fullName>
                </value>
                <value>
                    <fullName>Plan Sponsor Consultant</fullName>
                </value>
                <value>
                    <fullName>Plan Sponsor Day to Day Admin</fullName>
                </value>
                <value>
                    <fullName>Plan Sponsor Executive</fullName>
                </value>
                <value>
                    <fullName>Plan Sponsor General Contact</fullName>
                </value>
                <value>
                    <fullName>Plan Sponsor Investment Contact</fullName>
                </value>
                <value>
                    <fullName>Plan Sponsor Investment Fiduciary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RPS_Contact_Status_Effective_Date_pc__c</fullName>
        <externalDeveloperName>RPS_Contact_Status_Effective_Date__pc</externalDeveloperName>
        <label>Contact Status Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RPS_Contact_Status_pc__c</fullName>
        <externalDeveloperName>RPS_Contact_Status__pc</externalDeveloperName>
        <label>Contact Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RPS_Contact_Unique_ID_pc__c</fullName>
        <externalDeveloperName>RPS_Contact_Unique_ID__pc</externalDeveloperName>
        <label>Contact Unique ID</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RPS_Converted_from_Lead_pc__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>RPS_Converted_from_Lead__pc</externalDeveloperName>
        <label>Converted from Lead</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RPS_Customer_Since_c__c</fullName>
        <externalDeveloperName>RPS_Customer_Since__c</externalDeveloperName>
        <label>Customer Since</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RPS_Customer_Status_Effective_Date_c__c</fullName>
        <externalDeveloperName>RPS_Customer_Status_Effective_Date__c</externalDeveloperName>
        <label>Customer Status Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RPS_Customer_Status_c__c</fullName>
        <externalDeveloperName>RPS_Customer_Status__c</externalDeveloperName>
        <label>Customer Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RPS_DCIO_File_Options_c__c</fullName>
        <externalDeveloperName>RPS_DCIO_File_Options__c</externalDeveloperName>
        <inlineHelpText>Signature Fund File is an electronic file feed sent monthly. TRS/ENT Fund File is a manually created spreadsheet sent quarterly.</inlineHelpText>
        <label>DCIO File Options</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Signature Fund File</fullName>
                </value>
                <value>
                    <fullName>TRS/ENT Fund File</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RPS_Date_Time_Inactivated_pc__c</fullName>
        <externalDeveloperName>RPS_Date_Time_Inactivated__pc</externalDeveloperName>
        <label>Date/Time Inactivated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RPS_Deconversion_Package_c__c</fullName>
        <externalDeveloperName>RPS_Deconversion_Package__c</externalDeveloperName>
        <label>Deconversion Package</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RPS_Direct_Mail_c__c</fullName>
        <externalDeveloperName>RPS_Direct_Mail__c</externalDeveloperName>
        <label>Direct Mail</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RPS_Disable_Commission_RIA_Fees_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>RPS_Disable_Commission_RIA_Fees__c</externalDeveloperName>
        <label>Disable Commissions &amp; RIA Fees</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RPS_Distribution_Sources_pc__c</fullName>
        <externalDeveloperName>RPS_Distribution_Sources__pc</externalDeveloperName>
        <label>Distribution Sources</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RPS_Division_c__c</fullName>
        <externalDeveloperName>RPS_Division__c</externalDeveloperName>
        <label>Division</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Central</fullName>
                </value>
                <value>
                    <fullName>Mid Atlantic</fullName>
                </value>
                <value>
                    <fullName>Midwest</fullName>
                </value>
                <value>
                    <fullName>Northeast</fullName>
                </value>
                <value>
                    <fullName>NRM Team</fullName>
                </value>
                <value>
                    <fullName>Pacific Coast</fullName>
                </value>
                <value>
                    <fullName>Southeast</fullName>
                </value>
                <value>
                    <fullName>Taft Hartley</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RPS_Do_Not_Contact_pc__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>RPS_Do_Not_Contact__pc</externalDeveloperName>
        <label>Do Not Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RPS_Do_Not_Mail_pc__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>RPS_Do_Not_Mail__pc</externalDeveloperName>
        <label>Do Not Mail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RPS_Document_Type_Provider_c__c</fullName>
        <externalDeveloperName>RPS_Document_Type_Provider__c</externalDeveloperName>
        <label>Document Type Provider</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In-house</fullName>
                </value>
                <value>
                    <fullName>Relius</fullName>
                </value>
                <value>
                    <fullName>Datair</fullName>
                </value>
                <value>
                    <fullName>ASCi</fullName>
                </value>
                <value>
                    <fullName>FT Williams</fullName>
                </value>
                <value>
                    <fullName>Accudraft</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RPS_Does_not_want_to_do_Business_with_JH__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>RPS_Does_not_want_to_do_Business_with_JH__pc</externalDeveloperName>
        <label>Does not want to do Business with JH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RPS_Does_this_office_have_a_Sales_Desk_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>RPS_Does_this_office_have_a_Sales_Desk__c</externalDeveloperName>
        <label>Does this office have a Sales Desk?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RPS_Dollar_Amount_c__c</fullName>
        <externalDeveloperName>RPS_Dollar_Amount__c</externalDeveloperName>
        <inlineHelpText>$ Amount can only be entered when Transfer Fees = Yes</inlineHelpText>
        <label>$ Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RPS_Due_Diligence_Process_pc__c</fullName>
        <externalDeveloperName>RPS_Due_Diligence_Process__pc</externalDeveloperName>
        <label>Due Diligence Process</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RPS_EZincrease_c__c</fullName>
        <externalDeveloperName>RPS_EZincrease__c</externalDeveloperName>
        <label>EZincrease</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RPS_EZstart_c__c</fullName>
        <externalDeveloperName>RPS_EZstart__c</externalDeveloperName>
        <label>EZstart</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RPS_E_Series_pc__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>RPS_E_Series__pc</externalDeveloperName>
        <label>Participant Engagement Program</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RPS_Electronic_File_Feed_c__c</fullName>
        <externalDeveloperName>RPS_Electronic_File_Feed__c</externalDeveloperName>
        <label>Electronic File Feed</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Signature Custom Broker Dealer Firm</fullName>
                </value>
                <value>
                    <fullName>Signature Data Aggregation</fullName>
                </value>
                <value>
                    <fullName>Signature NSCC POV</fullName>
                </value>
                <value>
                    <fullName>Signature NSCC FAR</fullName>
                </value>
                <value>
                    <fullName>TRS/ENT Custom Broker Dealer Firm</fullName>
                </value>
                <value>
                    <fullName>TRS/ENT Data Aggregation</fullName>
                </value>
                <value>
                    <fullName>TRS/ENT NSCC RPR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RPS_Eligibility_Calculation_c__c</fullName>
        <externalDeveloperName>RPS_Eligibility_Calculation__c</externalDeveloperName>
        <label>Eligibility Calculation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RPS_Elite_Advisor_pc__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>RPS_Elite_Advisor__pc</externalDeveloperName>
        <label>Elite Advisor?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RPS_Enterprise_Total_AUM_c__c</fullName>
        <externalDeveloperName>RPS_Enterprise_Total_AUM__c</externalDeveloperName>
        <label>Enterprise Total AUM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RPS_Enterprise_Total_AUM_pc__c</fullName>
        <externalDeveloperName>RPS_Enterprise_Total_AUM__pc</externalDeveloperName>
        <label>Enterprise Total AUM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RPS_Exception_to_IC_Email_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>RPS_Exception_to_IC_Email__c</externalDeveloperName>
        <label>Exception to IC Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RPS_Exec_Admin_pc__c</fullName>
        <externalDeveloperName>RPS_Exec_Admin__pc</externalDeveloperName>
        <label>Exec / Admin</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>E</fullName>
                </value>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RPS_External_ID_c__c</fullName>
        <externalDeveloperName>RPS_External_ID__c</externalDeveloperName>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RPS_External_ID_pc__c</fullName>
        <externalDeveloperName>RPS_External_ID__pc</externalDeveloperName>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RPS_External_Sales_Active_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>RPS_External_Sales_Active__c</externalDeveloperName>
        <label>External Sales Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RPS_External_Sales_pc__c</fullName>
        <externalDeveloperName>RPS_External_Sales__pc</externalDeveloperName>
        <label>External Sales</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RPS_FAM_Comments_pc__c</fullName>
        <externalDeveloperName>RPS_FAM_Comments__pc</externalDeveloperName>
        <label>FAM Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RPS_Favorable_View_of_JHRPS_pc__c</fullName>
        <externalDeveloperName>RPS_Favorable_View_of_JHRPS__pc</externalDeveloperName>
        <inlineHelpText>Favorable View of JHRPS? (If not, try to obtain why)</inlineHelpText>
        <label>Favorable View of JHRPS?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RPS_Fee_for_Service_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>RPS_Fee_for_Service__c</externalDeveloperName>
        <label>Fee for Service?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RPS_Fee_for_Service_pc__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>RPS_Fee_for_Service__pc</externalDeveloperName>
        <label>Fee for Service?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RPS_Fiduciary_Role_pc__c</fullName>
        <externalDeveloperName>RPS_Fiduciary_Role__pc</externalDeveloperName>
        <inlineHelpText>Fiduciary role (if yes, which type -- (3)(21), (3)(38), etc.)</inlineHelpText>
        <label>Fiduciary Role</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RPS_Firm_Discussion_Points_c__c</fullName>
        <externalDeveloperName>RPS_Firm_Discussion_Points__c</externalDeveloperName>
        <label>Firm Discussion Points</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RPS_Firm_Notes_for_Dissemination_c__c</fullName>
        <externalDeveloperName>RPS_Firm_Notes_for_Dissemination__c</externalDeveloperName>
        <inlineHelpText>Notes will be propagated to all advisors associated to this firm record.</inlineHelpText>
        <label>Firm Notes for Dissemination</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RPS_Firm_Performance_Year_c__c</fullName>
        <externalDeveloperName>RPS_Firm_Performance_Year__c</externalDeveloperName>
        <label>Firm Performance Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RPS_Firm_Performance_c__c</fullName>
        <externalDeveloperName>RPS_Firm_Performance__c</externalDeveloperName>
        <label>Firm Performance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RPS_Firm_Roles_c__c</fullName>
        <externalDeveloperName>RPS_Firm_Roles__c</externalDeveloperName>
        <label>Firm Roles</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Competitor</fullName>
                </value>
                <value>
                    <fullName>Contractor</fullName>
                </value>
                <value>
                    <fullName>Law Firm</fullName>
                </value>
                <value>
                    <fullName>Payroll Provider</fullName>
                </value>
                <value>
                    <fullName>Third Party Vendor</fullName>
                </value>
                <value>
                    <fullName>Trustee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RPS_Firms_associated_to_DCIO_Firm_c__c</fullName>
        <externalDeveloperName>RPS_Firms_associated_to_DCIO_Firm__c</externalDeveloperName>
        <label>Firms associated to DCIO Firm</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RPS_First_Contract_Effective_Date_pc__c</fullName>
        <externalDeveloperName>RPS_First_Contract_Effective_Date__pc</externalDeveloperName>
        <label>First Contract Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RPS_First_Point_of_Contact_c__c</fullName>
        <externalDeveloperName>RPS_First_Point_of_Contact__c</externalDeveloperName>
        <label>First Point of Contact</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Always</fullName>
                </value>
                <value>
                    <fullName>Sometimes</fullName>
                </value>
                <value>
                    <fullName>Never</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RPS_Focus_Firm_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>RPS_Focus_Firm__c</externalDeveloperName>
        <label>Focus Firm</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RPS_For_Blind_Quote_Use_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>RPS_For_Blind_Quote_Use__c</externalDeveloperName>
        <label>For Blind Quote Use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RPS_Forum_Ranking_c__c</fullName>
        <externalDeveloperName>RPS_Forum_Ranking__c</externalDeveloperName>
        <label>Forum Ranking</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advisor</fullName>
                </value>
                <value>
                    <fullName>Not a Forum Member</fullName>
                </value>
                <value>
                    <fullName>Select</fullName>
                </value>
                <value>
                    <fullName>TPA Service Fee Allowed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RPS_Founders_Forum_Member_Code_c__c</fullName>
        <externalDeveloperName>RPS_Founders_Forum_Member_Code__c</externalDeveloperName>
        <label>Founders Forum Member Code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RPS_Fraud_Account_Flag_pc__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>RPS_Fraud_Account_Flag__pc</externalDeveloperName>
        <label>Fraud Account Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RPS_Fund_Partner_Tier_c__c</fullName>
        <externalDeveloperName>RPS_Fund_Partner_Tier__c</externalDeveloperName>
        <label>Fund Partner Tier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Diamond</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RPS_Fund_Partner_Total_Assets_c__c</fullName>
        <externalDeveloperName>RPS_Fund_Partner_Total_Assets__c</externalDeveloperName>
        <label>Fund Partner Total Assets</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RPS_Fund_Preferences_DCIO_Relationships__c</fullName>
        <externalDeveloperName>RPS_Fund_Preferences_DCIO_Relationships__pc</externalDeveloperName>
        <label>Fund Preferences/DCIO Relationships</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RPS_Future_Prospect_pc__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>RPS_Future_Prospect__pc</externalDeveloperName>
        <label>Future Prospect?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RPS_GA_Selling_Agreement_Status_Date_c__c</fullName>
        <externalDeveloperName>RPS_GA_Selling_Agreement_Status_Date__c</externalDeveloperName>
        <label>Signature Selling Agreement Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RPS_GA_Selling_Agreement_Status_c__c</fullName>
        <externalDeveloperName>RPS_GA_Selling_Agreement_Status__c</externalDeveloperName>
        <label>Signature Selling Agreement Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Terminated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RPS_GA_Total_AUM_c__c</fullName>
        <externalDeveloperName>RPS_GA_Total_AUM__c</externalDeveloperName>
        <label>Signature Total AUM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RPS_GA_Total_AUM_pc__c</fullName>
        <externalDeveloperName>RPS_GA_Total_AUM__pc</externalDeveloperName>
        <label>Signature Total AUM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RPS_Gender_pc__c</fullName>
        <externalDeveloperName>RPS_Gender__pc</externalDeveloperName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>M</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RPS_House_pc__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>RPS_House__pc</externalDeveloperName>
        <label>House?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RPS_ISG_Engagement_Level_c__c</fullName>
        <externalDeveloperName>RPS_ISG_Engagement_Level__c</externalDeveloperName>
        <label>ISG Engagement Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RPS_Import_File_Name_pc__c</fullName>
        <externalDeveloperName>RPS_Import_File_Name__pc</externalDeveloperName>
        <label>Import File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RPS_In_ISC_Business_Plan_pc__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>RPS_In_ISC_Business_Plan__pc</externalDeveloperName>
        <label>In ISC Business Plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RPS_In_Prior_Year_ISC_Business_Plan_pc__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>RPS_In_Prior_Year_ISC_Business_Plan__pc</externalDeveloperName>
        <label>In Prior Year ISC Business Plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RPS_Industry_Rating_pc__c</fullName>
        <externalDeveloperName>RPS_Industry_Rating__pc</externalDeveloperName>
        <label>Industry Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Prospect - No QP business</fullName>
                </value>
                <value>
                    <fullName>2 - Accommodator - 1 Plan</fullName>
                </value>
                <value>
                    <fullName>3 - Emerging - 2+ Plans or +$5M</fullName>
                </value>
                <value>
                    <fullName>4 - Specialist - 10+ Plans or +$40M</fullName>
                </value>
                <value>
                    <fullName>5 - Elite - 20+ Plans or + $100M</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RPS_Industry_Segment_c__c</fullName>
        <externalDeveloperName>RPS_Industry_Segment__c</externalDeveloperName>
        <label>Industry Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>05 - Corporations</fullName>
                </value>
                <value>
                    <fullName>10 - Unions</fullName>
                </value>
                <value>
                    <fullName>15 - Governments</fullName>
                </value>
                <value>
                    <fullName>50 - Advisors (Investment</fullName>
                </value>
                <value>
                    <fullName>53 - 401(k) Defined Contr</fullName>
                </value>
                <value>
                    <fullName>60 - Insurance Companies</fullName>
                </value>
                <value>
                    <fullName>83 - Mutual Fund Managers</fullName>
                </value>
                <value>
                    <fullName>Adhesives &amp; Films</fullName>
                </value>
                <value>
                    <fullName>Agent</fullName>
                </value>
                <value>
                    <fullName>Air Conditioners</fullName>
                </value>
                <value>
                    <fullName>Amusement and Recreation Services</fullName>
                </value>
                <value>
                    <fullName>Apparel &amp; Accessory Stores</fullName>
                </value>
                <value>
                    <fullName>Architecture &amp; Planning</fullName>
                </value>
                <value>
                    <fullName>Automobile Dealers &amp; Gasoline Service Stattions</fullName>
                </value>
                <value>
                    <fullName>Automotive</fullName>
                </value>
                <value>
                    <fullName>Automotive Testing</fullName>
                </value>
                <value>
                    <fullName>Aviation Maintenance</fullName>
                </value>
                <value>
                    <fullName>Aviation Safety Products</fullName>
                </value>
                <value>
                    <fullName>Bank</fullName>
                </value>
                <value>
                    <fullName>Beverages</fullName>
                </value>
                <value>
                    <fullName>Biotechnology</fullName>
                </value>
                <value>
                    <fullName>Broadcast Media</fullName>
                </value>
                <value>
                    <fullName>Broker</fullName>
                </value>
                <value>
                    <fullName>Broker Dealer Firm</fullName>
                </value>
                <value>
                    <fullName>Business Services</fullName>
                </value>
                <value>
                    <fullName>Carpenters</fullName>
                </value>
                <value>
                    <fullName>Cement Masons</fullName>
                </value>
                <value>
                    <fullName>Chemical - Commodity</fullName>
                </value>
                <value>
                    <fullName>Chemicals &amp; Allied Products</fullName>
                </value>
                <value>
                    <fullName>Clothing &amp; Apparel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>